fix: Add padding when on Safari on mobile to keep footer visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,14 @@
     }
 
     &::ng-deep lcc-footer {
+      // Add padding when on Safari on mobile to keep footer visible
+      @media screen and (max-width: 767px) {
+        _::-webkit-full-page-media,
+        _:future {
+          padding-bottom: 65px;
+        }
+      }
+
       // Manually push footer background to edge of screen
       width: calc(100% + 16px);
     }
